
****************************** DRUPAL 7 - 2.x BRANCH ********************************

July 01, 2012
-------------
Issue #1635800 by troky: Redone online users count.

June 29, 2012
-------------
Issue #1632260 by mcdruid, troky: Fixed performance issues with advanced_forum_statistics_replies.
Issue #1617840 by liquidcms: Added forum term translation support.

June 12, 2012
-------------
Issue #1621218 by sebcorbin: Fixed notices when non-forum associated content types are used.

June 09, 2012
-------------
Issue #1621956 by samsouk: Added missing "topics per page" parameter to forum list view.

June 02, 2012
-------------
Issue #210453 by troky: Added drop down list of forum hierarchy as template variable $forum_jump.

June 01, 2012
-------------
Issue #1612710 by troky: Fixed new post icon css in Blue lagoon style.

May 14, 2012
------------
Issue #1218894 by tomfriedhof: Removed Panels related conditional from Views preprocess function.
Issue #1218894 by troky: Fixed advanced_forum_forum_disabled variable function in registry.

May 13, 2012
------------
by troky: Panels adjusted and reexported.
Issue #1212964 by troky: CTools plugins redone/updated to D7 with bugfixes.

May 03, 2012
------------
Issue #1559340 by troky: Fixed notice while displaying orphaned forum shadow topic.

March 31, 2012
--------------
Issue #1506628 by BTMash: Added [Content Type Name] button localization.

March 19, 2012
-----------------
7.x-2.0 RELEASE

March 01, 2012
-----------------
by troky: Fixed undefined variable introduced in previous patch.

February 29, 2012
-----------------
Issue #1351392 by aidanlis: Added drupal_alter to advanced_forum_process_forum.

February 11, 2012
-----------------
by troky: Code cleanup in advanced_forum_allowed_node_types()

February 10, 2012
-----------------
Issue #1433566 by roderik: Reduce number of SQL queries on main forum page.

February 06, 2012
-----------------
Issue #1429936 by GANYANCI: Removed leftover function dpm().
